Fix agregando nro_serie y doc swagger
