# swagger.yaml
@@ -150,6 +150,7 @@ components:
     Repuesto:
       type: object
       required:
+        - nro_serie
         - nombre
         - marca
         - modelo_coche
@@ -160,6 +161,9 @@ components:
         _id:
           type: string
           description: El ID autogenerado por MongoDB.
+        nro_serie:
+          type: integer
+          description: Número de serie del repuesto.
         nombre:
           type: string
           description: Nombre del repuesto.
